# yapping

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  test-requirements.txt  yap.py
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  pre-commit.yaml  release.yml
testing/: pyproject.toml  requirements-test.txt  requirements.txt
tests/: conftest.py  test_add_dependency.py  test_compile.py  test_foo.py  test_init.py  test_main.py  test_rm_dependency.py  test_update_version.py
yapping/: __main__.py  cli.py  commands.py  exceptions.py
yapping/templates/: pyproject.toml
