[project]
name = "yapping"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.1"
authors = [
    { name = "Ferran Jovell" },
]
dependencies = [
    "pip-tools",
    "tomli-w",
]

[project.license]
file = "LICENSE"

[project.urls]
source = "https://github.com/mrswats/yapping/"

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-xdist",
    "time-machine",
]
build = [
    "build",
    "twine",
]

[project.scripts]
yap = "yapping.cli:main"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "yapping",
]

[tool.autoflake]
recursive = true
in_place = true


[tool.mypy]
files = "."
ignore_missing_imports = true
strict = true

[tool.coverage.run]
plugins = [
    "covdefaults",
]
omit = []

[tool.coverage.html]
directory = "artifacts/htmlcov/"
