[project]
name = "yapping"
version = "1.4.4"
description = "Yet another python dependency manager."
readme = "README.md"
requires-python = ">=3.11.14"
authors = [
    { name = "Ferran Jovell" },
]
dependencies = [
    "pip-tools",
    "pip<26",
    "tomli-w",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/mrswats/yapping/"
"Release notes" = "https://github.com/mrswats/yapping/blob/main/README.md#changelog"
source = "https://github.com/mrswats/yapping/"

[project.scripts]
yap = "yapping.cli:main"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "yapping",
]

[tool.autoflake]
recursive = true
in_place = true

[tool.mypy]
files = "."
ignore_missing_imports = true
strict = true

[tool.coverage.run]
plugins = [
    "covdefaults",
]
omit = []

[tool.coverage.html]
directory = "artifacts/htmlcov/"
